--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
 	<script src="build/kalendae.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-	
+	<h1>Kalendae</h1>
 	<script type="text/javascript" charset="utf-8">
-		var k = new Kalendae({
+		var k1 = new Kalendae({
 			attachTo:document.body,
-			months:3,
+			months:1,
+			selected:'2/3/12',
+			mode:'single',
+			blackout: function (date) {
+				return [1,0,0,0,0,0,1][moment(date).day()]; //blackout weekends
+			}
+		});
+
+		var k2 = new Kalendae({
+			attachTo:document.body,
+			months:2,
 			selected:'2/3/12,3/15/12',
-			mode:'multiple',
+			mode:'range',
 			blackout: function (date) {
 				return [1,0,0,0,0,0,1][moment(date).day()]; //blackout weekends
 			},
+			/*
 			subscribe: {
 				'change':function () {
 					console.log('change', this.getSelected());
@@ -27,6 +38,17 @@
 				'view-changed':function (direction) {
 					console.log('view-changed', direction);
 				}
+			}
+			*/
+		});
+		
+		var k3 = new Kalendae({
+			attachTo:document.body,
+			months:3,
+			selected:'2/3/12,3/15/12, 4/9/12',
+			mode:'multiple',
+			blackout: function (date) {
+				return [1,0,0,0,0,0,1][moment(date).day()]; //blackout weekends
 			}
 		});
 
