--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			selected:'2/2/12',
 			mode:'single',
 			blackout: function (date) {
-				return moment(date).date() % 2; //blackout every other day
+				return Kalendae.moment(date).date() % 2; //blackout every other day
 			}
 		});
 
@@ -25,7 +25,7 @@
 			selected:'2/3/12,3/15/12',
 			mode:'range',
 			blackout: function (date) {
-				return [1,0,0,0,0,0,1][moment(date).day()]; //blackout weekends
+				return [1,0,0,0,0,0,1][Kalendae.moment(date).day()]; //blackout weekends
 			},
 			/*
 			subscribe: {
@@ -48,7 +48,7 @@
 			selected:'2/3/12,3/15/12, 4/9/12',
 			mode:'multiple',
 			blackout: function (date) {
-				return moment(date).format('w') % 2;  //blackout every other week
+				return Kalendae.moment(date).format('w') % 2;  //blackout every other week
 			}
 		});
 
