Added auto-creation using the auto-kal css class.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
 		});
 	</script>
 	
+	<hr>
+	This calendar is auto-created.
+	<div class="auto-kal"></div>
+	
+	<hr>
+	So is the one on this input.
+	<input type="text" class="auto-kal">
 	
 </body>
 </html>
