--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="build/kalendae.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="build/kalendae.css" type="text/css" charset="utf-8">
 	<script src="build/kalendae.js" type="text/javascript" charset="utf-8"></script>
 	<style type="text/css" media="screen">
 		.kalendae span.closed {
