CSS cleanup broke the class map demo.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="build/kalendae.css" type="text/css" charset="utf-8">
 	<script src="build/kalendae.js" type="text/javascript" charset="utf-8"></script>
 	<style type="text/css" media="screen">
-		.kalendae span.closed {
+		.kalendae .k-days span.closed {
 			background:red;
 		}
 	</style>
