Allow setting of options when using auto-kal(via data-kal attribute)

--- a/index.html
+++ b/index.html
@@ -148,5 +148,12 @@
 	So is the one on this input.
 	<input type="text" class="auto-kal">
 	
+	<hr>
+  This calendar is auto-created with months: 3.
+	<div class="auto-kal" data-kal="months: 3"></div>
+	
+	<hr>
+	This calander on this input is auto-created with direction: 'future'.
+	<input type="text" class="auto-kal" data-kal="direction: 'future'">
 </body>
 </html>
