Update docs / readme with disableYearNav option.

--- a/index.html
+++ b/index.html
@@ -156,5 +156,9 @@
 	This calander on this input is auto-created with direction: 'future'.
 	<input type="text" class="auto-kal" data-kal="direction: 'future'">
 
+	<hr>
+	This calander has no year navigation (disableYearNav: true).
+	<div class="auto-kal" data-kal="disableYearNav: true">
+
 </body>
 </html>
