Change yearNav option to be positive, rather than negative.

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 	<input type="text" class="auto-kal" data-kal="direction: 'future'">
 
 	<hr>
-	This calander has no year navigation (disableYearNav: true).
-	<div class="auto-kal" data-kal="disableYearNav: true">
+	This calander has no year navigation (useYearNav: false).
+	<div class="auto-kal" data-kal="useYearNav: false">
 
 </body>
 </html>
