Update docs/readme with a dayOutOfMonthClickable option.

--- a/index.html
+++ b/index.html
@@ -156,5 +156,9 @@
 	This calander on this input is auto-created with direction: 'future'.
 	<input type="text" class="auto-kal" data-kal="direction: 'future'">
 
+	<hr>
+	This calendar allows clicks outside of the focused month (dayOutOfMonthClickable: true):
+	<div class="auto-kal" data-kal="months: 1, dayOutOfMonthClickable: true"></div>
+
 </body>
 </html>
