initial commet for metal skin

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<link rel="stylesheet" href="build/kalendae.css" type="text/css" charset="utf-8">
+	<link rel="stylesheet" href="skins/css/metal.css" type="text/css">
 	<script src="build/kalendae.js" type="text/javascript" charset="utf-8"></script>
 	<style type="text/css" media="screen">
 		.kalendae .k-days span.closed {
