--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<link rel="stylesheet" href="build/kalendae.css" type="text/css" charset="utf-8">
-	<script src="build/kalendae.js" type="text/javascript" charset="utf-8"></script>
+	<script src="build/kalendae.standalone.min.js" type="text/javascript" charset="utf-8"></script>
 	<style type="text/css" media="screen">
 		.kalendae span.closed {
 			background:red;
