Make sure to call input.blur() so it can be clicked again and selected Update demo page and standalone.js so the demo works

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
 			months:2
 		});
 	</script>
+	<hr>
+	
+	Click this input element (Auto closes after selection): <input type="text" value="2/16/2012" id="input2">
+	<script type="text/javascript" charset="utf-8">
+		var k4 = new Kalendae.Input('input2', {
+			months:1,
+			closeOnSelection: true
+		});
+	</script>
+
 
 	<hr>
 	This calendar is auto-created.
