--- a/demo_mobile.html
+++ b/demo_mobile.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="build/kalendae_mobile.css" type="text/css" charset="utf-8">
         <!-- <script src="src/moment.js" type="text/javascript" charset="utf-8"></script> -->
         <!-- <script src="build/kalendae.js" type="text/javascript" charset="utf-8"></script> -->
-        <script src="build/kalendae.standalone.js" type="text/javascript" charset="utf-8"></script>
+        <script src="build/kalendae.standalone_zh.js" type="text/javascript" charset="utf-8"></script>
         <style type="text/css" media="screen">
             .kalendae .k-days span.closed {
                 background:red;
@@ -36,7 +36,6 @@
 
 
         </script>
-       <div style="display: none">本资源由haorooms前端资源库整理，更多资源请查看haorooms。资源整理耗费时间和精力，假如您转载该资源，请注明出自haorooms前端资源库！谢谢！</div>
-
+        <div style="display: none">本资源由haorooms前端资源库整理，更多资源请查看haorooms。资源整理耗费时间和精力，假如您转载该资源，请注明出自haorooms前端资源库！谢谢！</div>
     </body>
 </html>
