--- a/demo_pc.html
+++ b/demo_pc.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="build/kalendae_pc.css" type="text/css" charset="utf-8">
         <!-- <script src="src/moment.js" type="text/javascript" charset="utf-8"></script> -->
         <!-- <script src="build/kalendae.js" type="text/javascript" charset="utf-8"></script> -->
-        <script src="build/kalendae.standalone.js" type="text/javascript" charset="utf-8"></script>
+        <script src="build/kalendae.standalone_zh.js" type="text/javascript" charset="utf-8"></script>
         <style type="text/css" media="screen">
             .kalendae .k-days span.closed {
                 background:red;
