--- a/demo_mobile.html
+++ b/demo_mobile.html
@@ -27,6 +27,7 @@
                 format: "YYYY-MM-DD",
                 rangeDelimiter: "至",
                 side:"middle",
+				disableDate:true,
                 selected: Kalendae.moment().subtract({M: 1}),
                 subscribe: {
                     'change': function (date) {
